# server/openapi/openapi.json
@@ -399,7 +399,7 @@
       },
       "RailTrainTrip" : {
         "type" : "object",
-        "required" : [ "tripId", "stopTimes", "serviceId", "agencyId", "trainUid" ],
+        "required" : [ "tripId", "stopTimes", "serviceId", "agencyId", "trainUid", "headcode", "traction" ],
         "properties" : {
           "tripId" : {
             "type" : "string"
@@ -418,6 +418,15 @@
           },
           "trainUid" : {
             "type" : [ "string", "null" ]
+          },
+          "headcode" : {
+            "type" : [ "string", "null" ]
+          },
+          "traction" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Traction"
+            }
           }
         }
       },
@@ -542,6 +551,26 @@
           "type" : {
             "type" : "string",
             "enum" : [ "RAIL_LEG" ]
+          }
+        }
+      },
+      "Traction" : {
+        "type" : "object",
+        "required" : [ "source", "powerType", "timingLoad", "maxSpeed" ],
+        "properties" : {
+          "source" : {
+            "type" : "string",
+            "enum" : [ "CIF_SCHEDULE" ]
+          },
+          "powerType" : {
+            "type" : [ "string", "null" ]
+          },
+          "timingLoad" : {
+            "type" : [ "string", "null" ]
+          },
+          "maxSpeed" : {
+            "type" : [ "integer", "null" ],
+            "format" : "int32"
           }
         }
       },
